# anthrax-ai

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  engine-lin.code-workspace  engine-win.code-workspace  engine.code-workspace  run.sh
.cache/clangd/index/: 3DSConverter.cpp.560F5A022FD5E162.idx  3DSHelper.h.7B01FB4AC190CB02.idx  3DSLoader.cpp.721698CFD86E773D.idx  3DSLoader.h.A8AD81ACD10F5753.idx  3MFTypes.h.D03A92556A4DC995.idx  3MFXmlTags.h.2B0C8E2143F32702.idx  ACLoader.cpp.1C42F11B581517BD.idx  ACLoader.h.C9B6F0C85BBFD63C.idx  AMFImporter.cpp.EF711DDC30002C89.idx  AMFImporter.hpp.3EDEC85DF378925F.idx  AMFImporter_Geometry.cpp.870CAF841CFC084D.idx  AMFImporter_Material.cpp.84F369FC24430351.idx  AMFImporter_Node.hpp.DD1B9C7224AFBCC2.idx  AMFImporter_Postprocess.cpp.8795B20EA56011DC.idx  ASELoader.cpp.1B6DC1F2ABBD012E.idx  ASELoader.h.E6CE370947E99320.idx  ASEParser.cpp.65E29EA032E29105.idx  ASEParser.h.083F97F3A294B69E.idx  ArmaturePopulate.cpp.C460B637CACC9633.idx  ArmaturePopulate.h.4CA688EE1BE00C70.idx  AssbinLoader.cpp.7533DD1D79A3288B.idx  AssbinLoader.h.99BAC8BA10D015CD.idx  AssertHandler.cpp.80D519A6A228F695.idx  AssertHandler.h.1E58C080DBFFF365.idx  Assimp.cpp.7696D8F215519804.idx  B3DImporter.cpp.A4C09D4365D5652E.idx  B3DImporter.h.BFEB95FB7D819107.idx  BVHLoader.cpp.0E7389EE374A3DB8.idx  BVHLoader.h.5E3FB2DE60BFC9EB.idx  Base64.cpp.D4F90C843BF0A93B.idx  Base64.hpp.8AD415B944FD95BB.idx  BaseImporter.cpp.247C4532436078B4.idx  BaseImporter.h.A0070207EDC6F2CA.idx  BaseProcess.cpp.19B28C09FB2C133B.idx  BaseProcess.h.8B6FEDDBE95CC637.idx  Bitmap.cpp.97C769ED8E777D29.idx  Bitmap.h.B74505ED7347642E.idx  BlenderBMesh.cpp.822D50893ECBBFA4.idx  BlenderBMesh.h.DFA5D973862443C3.idx  BlenderCustomData.cpp.415C0F1D5E6523C7.idx  (+748 more)
assets/: .gdb_history  .gitignore
assets/cmake/: AAICompileShaders.cmake
assets/levels/: 1  2  4
assets/models/: Catwalk.dae  Dying-anim.dae  Excited.dae  axis.mtl  axisx.mtl  axisy.mtl  bob.dae  body-jab-cross.dae  bot-test.fbx  cube.mtl  double-kick-anim.dae  gizmo.mtl  gizmox.mtl  gizmoz.mtl  monkeytextured.mtl  nightshade-cat-walk.dae  sphere.mtl
assets/scenes/: animated  scene1  textures
assets/shaders/: animmodel.vert  broken.vert  copy.frag  copy.vert  debug.frag  debug.vert  defines.h  fragdef.h  gbuffer.frag  gizmo.frag  gizmo.vert  grid.frag  grid.vert  helpers.h  intro.frag  lighting.frag  mask.frag  model.frag  model.vert  outline.frag  outline.vert  sprite.frag  sprite.vert  test.frag  vbase.vert  vertdef.h
assets/shaders/defines/: defines.h  fragdef.h  helpers.h  vertdef.h
assets/texts/: text-output-scheme  text1
assets/textures/: drawcube.raw
assets/tools/: compile_shaders.cmake
cmake/: options.cmake
demos/: CMakeLists.txt
demos/cmake/: AAIScanDemos.cmake
demos/demo-models/: CMakeLists.txt
demos/demo-models/platform/linux/: main.cpp
demos/demo-models/platform/windows/: main.cpp
engine/: .gitignore  CMakeLists.txt  TODO  compile.bat
engine/code/include/anthraxAI/: animator.h  camera.h  debugmanager.h  editorui.h  engine.h  levelmanager.h  lights.h  lookup.h  parser.h  resourcemanager.h  vkbuffer.h  vkbuilder.h  vkcmdhandler.h  vkdebug.h  vkdefines.h  vkdescriptors.h  vkdevices.h  vkengine.h  vkmesh.h  vkmodel.h  vkpipeline.h  vkrenderer.h  vktexture.h
engine/code/include/anthraxAI/core/: animator.h  audio.h  camera.h  deletor.h  imguihelper.h  scene.h  windowmanager.h
engine/code/include/anthraxAI/gamemodules/: modules.h
engine/code/include/anthraxAI/gameobjects/: gameobjects.h
engine/code/include/anthraxAI/gameobjects/objects/: camera.h  gizmo.h  light.h  npc.h  sprite.h
engine/code/include/anthraxAI/gfx/: bufferhelper.h  model.h  renderhelpers.h  vkbase.h  vkcmdhelper.h  vkdebug.h  vkdefines.h  vkdescriptors.h  vkdevice.h  vkdevicehelper.h  vkmesh.h  vkpipeline.h  vkrenderer.h  vkrendertarget.h
engine/code/include/anthraxAI/utils/: debug.h  defines.h  mathdefines.h  parser.h  singleton.h  thread.h  tracy.h
engine/code/src/: animator.cpp  camera.cpp  debugmanager.cpp  editor.cpp  editorui.cpp  engine.cpp  levelmanager.cpp  loop.cpp  main.cpp  move.cpp  parser.cpp  processanimation.cpp  processresources.cpp  processtrigger.cpp  render.cpp  sceneproc.cpp  vkbuffer.cpp  vkbuilder.cpp  vkcmdhandler.cpp  vkdebug.cpp  vkdescriptors.cpp  vkdevices.cpp  vkdraw.cpp  vkengine.cpp  vkimagehelper.cpp  vkmain.cpp  vkmesh.cpp  vkmodel.cpp  vkpipeline.cpp  vkqueuehelper.cpp  vkrenderer.cpp  vktexture.cpp  vkui.cpp  window.cpp
engine/code/src/core/: animator.cpp  assets.cpp  audio.cpp  camera.cpp  imguihelper.cpp  scene.cpp  windowmanager.cpp
engine/code/src/gamemodules/: modules.cpp
engine/code/src/gameobjects/: gameobjects.cpp
engine/code/src/gameobjects/objects/: camera.cpp  gizmo.cpp  light.cpp  npc.cpp  sprite.cpp
engine/code/src/gfx/: model.cpp  vkbase.cpp  vkbuffer.cpp  vkcmdhelper.cpp  vkdebug.cpp  vkdescriptors.cpp  vkdevice.cpp  vkmesh.cpp  vkpipeline.cpp  vkrenderer.cpp  vkrendertarget.cpp  vktextures.cpp
engine/code/src/utils/: parser.cpp  thread.cpp
engine/lib/: CMakeLists.txt
engine/libs/: CMakeLists.txt
engine/libs/glm/: CMakeLists.txt
engine/libs/imgui/: imgui_impl_vulkan.cpp
source/: engine.code-workspace
source/engine/: Makefile  TODO  compile.sh  imgui.ini
source/engine/includes/: animator.h  levelmanager.h  lookup.h  parser.h  vkbuffer.h  vkbuilder.h  vkdebug.h  vkdefines.h  vkdescriptors.h  vkdevices.h  vkengine.h  vkmesh.h  vkpipeline.h  vkrenderer.h  vktexture.h
source/engine/levels/: 0  1  2  3  4  5  7  8
source/engine/models/: monkeytextured.mtl
source/engine/shaders/: model.frag  model.frag.spv  model.vert  model.vert.spv  simpleShader.frag  simpleShader.frag.spv  simpleShader.vert  simpleShader.vert.spv  sprite.frag.spv  sprite.vert.spv  test.frag  test.frag.spv
source/engine/src/: editor.cpp  levelmanager.cpp  move.cpp  parser.cpp  processanimation.cpp  processtrigger.cpp  vkbuffer.cpp  vkbuilder.cpp  vkdebug.cpp  vkdescriptors.cpp  vkdevices.cpp  vkdraw.cpp  vkengine.cpp  vkui.cpp  (+8 more)
tools/linux/: install-vulkan-sdk.sh  setup-environment.sh
(+108 files in other folders)
